--- a/index.html
+++ b/index.html
@@ -1721,10 +1721,11 @@ IDR 0.00
 <ul>
    <li style="list-style-type: none;">
 <ul>
-  <li><a href="https://dani.town/" rel="dofollow">idnslot</a></li>
-  <li><a href="https://brewoverdesign.com/" rel="dofollow">slot77</a></li>
-  <li><a href="https://b7oth.com/" rel="dofollow">slot77</a></li>
+  <li><a href="https://neotericdesign.com/" rel="dofollow">onicplay</a></li>
+  <li><a href="https://newscycle.com/" rel="dofollow">s7upbet</a></li>
   <li><a href="https://docly.uk/" rel="dofollow">slot77</a></li>
+  <li><a href="https://295devops.com/" rel="dofollow">7upbet</a></li>
+  <li><a href="https://dani.town/" rel="dofollow">idnslot</a></li>
 </ul>
 </li>
 </ul></div>
